Archive2/9d/3fb7609d4e3b3c/output
main.cpp:19:24: error: expected class name
class NavMesh : public A
                       ^
main.cpp:28:18: error: no member named 'GetTableName' in 'NavMesh'; did you mean 'AI::GetTableName'?
    std::cout << NavMesh::GetTableName();
                 ^~~~~~~~~~~~~~~~~~~~~
                 AI::GetTableName
main.cpp:9:24: note: 'AI::GetTableName' declared here
    static std::string GetTableName() { return "Pilot"+ GetName(); }
                       ^
2 errors generated.
